@@ -89,6 +89,7 @@ Mantis ChangeLog
  * Added core_bugnote_API.php.
  * Added core_bug_API.php.
  * Modified br, hr, li, img, selected, checked, and other html elements to be XHTML compliant.
+ * Added javascript autofocus to the login page.
 
 2002.08.18  -  0.17.4
  * This is a maintenance release. It patches up several vulnerabilities in 0.17.3. No features have been added.
